--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ Refer <a href="https://github.com/wsonetunnel/tunnel-server-observability/blob/m
 <li>Resource recommendation of Linux VM 4 core 16GB 100 GB storage </li>
 <li>Retention policy<ul>
 <li>For Logs, 7 days of data is retained.</li></ul></li></ul></li>
-<li>Ensure, docker and docker-compose is installed on Linux VM. Run <code>docker version</code> to confirm the same.</li>
+<li>Ensure, docker and docker compose is installed on Linux VM. Run <code>docker compose version</code> to confirm the same.</li>
 <li>Start docker using <code>systemctl start docker</code></li></ul></li>
 <li>Clone the <a href="https://github.com/wsonetunnel/ws1-components-observability/">repo</a> on Linux VM OR download to your local,zip the entire repo and transfer it to VM.</li>
 <li>Login to VM</li>
